[package]
name = "swap-anchor"
version = "1.5.2"
description = "Anchor bindings for the StableSwap Rust client."
license = "Apache-2.0"
authors = ["Paul <truedandyman0617@gmail.com>"]
edition = "2018"
keywords = ["solana", "anchor"]

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
swap-client = { path = "../swap-client", version = "1.2.0" }
