[package]
name = "swap-client"
version = "1.5.2"
description = "StableSwap Rust client."
license = "Apache-2.0"
authors = ["Paul <truedandyman0617@gmail.com>"]
edition = "2018"
keywords = ["solana"]

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
