[package]
name = "swap-math"
version = "1.4.2"
description = "Calculations for the StableSwap invariant"
license = "Apache-2.0"
authors = ["Paul <truedandyman0617@gmail.com>"]
edition = "2018"
keywords = ["solana"]

[dependencies]
borsh = "0.9.1"
num-traits = "0.2"
swap-client = { path = "../swap-client", version = "1.0.0" }
uint = { version = "0.9.1", default-features = false }
